# simple-code-gui

./: .gitignore  .kspec-agents-hash  .kspec-dispatch-workspace.json  .setup-scaffold-state.json  .setup-state.json  AGENTS.md  CLAUDE.md  CONFIG_SHEET_ID-20-05-2026.xlsx  CONTRIBUTING.md  PKGBUILD  README.md  ROADMAP.md  UI-REVIEW.md  all_refs.txt  biome.json  build_log.txt  electron-builder.yml  export.json  findings.md  index.html  issues.jsonl  knspsqsd9qi3jvdbaaovarn0t5lgvpip.darc  kspec-agents.md  kspec.config.yaml  m6pjpb8vfjuelajjuimkdpsahtninbfh  manifest  notes.md  package-lock.json  package.json  performance_audit.txt  playwright.config.ts  progress.md  project.dispatch-workspaces.yaml  project.meta.yaml  project.plans.yaml  project.reviews.yaml  project.tasks.yaml  project.yaml  rvtd7eljbmkmjseqovqjjtr98fvvbjff  tailwind.config.js  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_manager.rs  agent_manager.rs  clipboard_manager.rs  database.rs  diagnostic_manager.rs  extension_manager.rs  health_manager.rs  jobs_manager.rs  lib.rs  mcp_bridge.rs  mobile_sync.rs  nexus_context.rs  orchestration.rs  platform.rs  project_intelligence.rs  project_scanner.rs  pty_manager.rs  rtk_context.rs  rtk_manager.rs  session_manager.rs  settings_manager.rs  upgrade_manager.rs  voice_manager.rs  workspace_manager.rs
src-tauri/src/ai_runtime/: context_compressor.rs  learning.rs  mod.rs  opt_metrics.rs  optimizer.rs  semantic_cache.rs  types.rs
src-tauri/src/gsd_engine/: architect.rs  borg.rs  (+15 more)
(+717 files in other folders)
