[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
parking_lot = "0.12"
regex = "1"
dirs = "5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-fs = "2.5.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tts = "0.26"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros" ] }
tar = "0.4.45"
flate2 = "1.1.9"
zip = "4.2.0"

